fixed overflow

--- a/assets/section-product-compare-view.css
+++ b/assets/section-product-compare-view.css
@@ -6,12 +6,11 @@
 
 product-compare-view #compare-product-container {
   display: flex;
-  flex-wrap: wrap;
-  row-gap: 10px;
   flex-direction: row;
   overflow-x: auto;
   padding: 30px 30px 30px;
-  justify-content: center;
+  justify-content: flex-start;
+  margin-top: 0px;
   column-gap: 10px;
   scrollbar-width: thin;
   scrollbar-color: rgb(255, 255, 255, 0.5) #000;
@@ -26,8 +25,7 @@ product-compare-view #compare-product-container {
   product-compare-view #compare-product-container {
     width: 100%;
     justify-content: flex-start;
-    align-items: center;
-    flex-direction: column;
+    overflow-x: auto;
     gap: 20px;
   }
 }
@@ -121,7 +119,6 @@ product-compare-view .heading-wrap {
 
 product-compare-view .loading-spinner-wrap {
   min-height: 34px;
-  margin-bottom: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -184,7 +181,7 @@ product-compare-view .compare-product-card {
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-width: 18%;
+  min-width: fit-content;
   cursor: pointer;
   transition: transform 0.1s ease, box-shadow 0.1s ease;
 }
